--- a/app/src/main/res/layout/activity_search_bar.xml
+++ b/app/src/main/res/layout/activity_search_bar.xml
@@ -8,6 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+<!--    hello i'm putki-->
 
     <EditText
         android:layout_width="318dp"
