--- a/app/src/main/res/layout/activity_swap_page.xml
+++ b/app/src/main/res/layout/activity_swap_page.xml
@@ -9,6 +9,9 @@
     >
 
 
-    
-
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="hello" />
 </LinearLayout>
