--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -58,7 +58,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/Input_email"
         android:layout_width="334dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
@@ -72,7 +72,7 @@
         tools:ignore="RtlSymmetry" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/Input_pass"
         android:layout_width="334dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
