added swap page

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -185,6 +185,7 @@
             android:background="@drawable/icon_favorite"
             />
         <ImageButton
+            android:id="@+id/Swap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
