--- a/app/src/main/res/layout/activity_swap_page.xml
+++ b/app/src/main/res/layout/activity_swap_page.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".swap_page"
     android:orientation="vertical"
+
     >
 
     <LinearLayout
@@ -15,7 +16,8 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        tools:ignore="MissingConstraints">
+        android:layout_marginTop="10dp"
+        >
 
         <ImageView
             android:layout_width="80dp"
@@ -35,16 +37,254 @@
             android:layout_height="125dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/thriller_01" />
+        
 
     </LinearLayout>
 
-<<<<<<< HEAD
-
-=======
-    <TextView
-        android:id="@+id/textView9"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hello" />
->>>>>>> 91aa82a7d1ac688ddc9f26068cd8bf55f3df3b9d
+        android:gravity="center"
+        android:padding="5dp"
+        android:layout_marginTop="10dp">
+        
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="35dp"
+            android:background="@drawable/continue_with_button"
+            android:backgroundTint="@color/cat_button_stroke"
+            android:text="@string/swap"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:gravity="center"
+            />
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="490dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                >
+
+                <Button
+                    android:layout_width="110dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/continue_with_button"
+                    android:backgroundTint="@color/cat_button_stroke"
+                    android:text="@string/my_books"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:layout_marginStart="23dp"
+                    />
+
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_width="400dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="17dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/my_book_01"
+                        android:layout_marginStart="23dp"
+
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/my_book_02"
+                        android:layout_marginStart="23dp"
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/my_book_03"
+                        android:layout_marginStart="23dp"
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/novel_01"
+                        android:layout_marginStart="23dp"
+                        />
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/thriller_01"
+                        android:layout_marginStart="23dp"
+                        />
+
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:background="@drawable/continue_with_button"
+                    android:backgroundTint="@color/cat_button_stroke"
+                    android:text="@string/recomended_books"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:layout_marginStart="23dp"
+                    />
+
+            </LinearLayout>
+
+
+            <HorizontalScrollView
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="17dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/recomend_01"
+                        android:layout_marginStart="23dp"
+
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/recomend_02"
+                        android:layout_marginStart="23dp"
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/recomend_03"
+                        android:layout_marginStart="23dp"
+                        />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:layout_marginStart="23dp"
+                        android:background="@drawable/poetry_01" />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="125dp"
+                        android:layout_marginStart="23dp"
+                        android:background="@drawable/poetry_02" />
+
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/hot_deals_button"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:src="@drawable/hot_deal"
+                />
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            >
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/icon_home"
+                />
+            <ImageButton
+                android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="33dp"
+                android:layout_gravity="center"
+                android:background="@drawable/icon_favorite"
+                />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="33dp"
+                android:background="@drawable/ic_swap"
+                />
+
+            <ImageButton
+                android:id="@+id/Profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="33dp"
+                android:background="@drawable/icon_user"
+                />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="33dp"
+                android:background="@drawable/icon_menu"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
 </LinearLayout>
