--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,51 +1,120 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cart">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:ignore="MissingDefaultResource">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/cart_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:text="My Cart"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/cardview_dark_background"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
+        android:weightSum="2">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="100dp"
-            android:src="@drawable/poetry_02"
-            />
+            android:id="@+id/cart_item_image"
+            android:background="@drawable/a_million_to_one"
+            android:layout_width="80dp"
+            android:layout_height="160dp"
+            android:scaleType="centerCrop" />
 
-        <ImageButton
-            android:id="@+id/minus"
-            android:layout_width="15dp"
-            android:layout_height="10dp"
-            android:layout_gravity="center"
-            android:src="@drawable/icon__minus"
-            android:layout_marginStart="50dp"
-            />
-        <TextView
-            android:id="@+id/count"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginStart="16dp">
+
+            <TextView
+                android:id="@+id/cart_item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A Million To One"
+
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cart_item_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tony Faggioli"
+                android:textSize="18sp"
+                android:layout_marginTop="4dp" />
+
+            <TextView
+                android:id="@+id/cart_item_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="$12.99"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/cart_remove_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:layout_marginStart="50dp"
-            />
-        <ImageButton
-            android:id="@+id/plus"
-            android:layout_width="25dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:src="@drawable/icon__plus"
-            android:layout_marginStart="50dp"
-            />
+            android:text="Remove"
+            android:textSize="14sp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/cardview_dark_background"
+            android:textColor="@color/white"
+            android:layout_gravity="center_vertical" />
 
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="Subtotal: $12.99"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="16dp" />
+
+        <Button
+            android:id="@+id/cart_checkout_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Checkout"
+            android:textSize="18sp"
+            android:background="@color/cat_button_stroke"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
