--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -21,14 +21,27 @@
       android:textSize="24sp"
       android:textColor="@color/black"
       tools:ignore="Suspicious0dp" />
+
   <EditText
-      android:id="@+id/Input_email"
+      android:id="@+id/etName"
+      android:layout_width="334dp"
+      android:layout_height="45dp"
+      android:layout_gravity="center"
+      android:inputType="textPersonName"
+      android:layout_marginTop="43dp"
+      android:background="@drawable/edittext_design"
+      android:hint="Name"
+      android:paddingStart="15dp"
+       />
+
+  <EditText
+      android:id="@+id/etEmail"
       android:layout_width="334dp"
       android:layout_height="45dp"
       android:layout_gravity="center"
       android:layout_marginBottom="12dp"
       android:inputType="textEmailAddress"
-      android:layout_marginTop="43dp"
+      android:layout_marginTop="15dp"
       android:background="@drawable/edittext_design"
       android:drawableStart="@drawable/ic_email"
       android:paddingStart="10dp"
@@ -36,7 +49,7 @@
       android:drawablePadding="8dp"
       tools:ignore="RtlSymmetry" />
   <EditText
-      android:id="@+id/Input_pass"
+      android:id="@+id/etPassword"
       android:layout_width="334dp"
       android:layout_height="45dp"
       android:layout_gravity="center"
@@ -63,7 +76,7 @@
       />
 
   <EditText
-      android:id="@+id/Input_confirm_pass"
+      android:id="@+id/etConfirmPassword"
       android:layout_width="334dp"
       android:layout_height="45dp"
       android:layout_gravity="center"
@@ -79,7 +92,7 @@
       android:paddingStart="10dp" />
 
   <Button
-      android:id="@+id/next"
+      android:id="@+id/btnNext"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="51dp"
