--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -89,7 +89,7 @@
         tools:ignore="RtlSymmetry" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/forgotPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/forgot_your_password"
@@ -99,7 +99,7 @@
         android:textColor="@color/black"
         />
     <Button
-        android:id="@+id/Login"
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
